# client

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.worker  README.md  config.py  docker-compose.enterprise.yml  docker-compose.monitoring.yml  docker-compose.saas.yml  docker-compose.yml  main.py  outreach.py  pyproject.toml  requirements-dev.txt  requirements-postgres.txt  requirements.txt  run.py  scraper_progress.txt
ai/: __init__.py  generator.py
analytics/: __init__.py  ingest.py  kpi_engine.py  overview.py
api/: auth_jwt.py  deps.py  main.py  middleware.py  telemetry.py
billing/: __init__.py  service.py
bots/: __init__.py  base.py  email.py  instagram.py  linkedin.py  whatsapp.py
browser_grid/: __init__.py  agent.py  executor.py
browser_supervisor/: __init__.py  pool.py
compliance/: __init__.py  registry.py
config/: feature_flags.yaml  rate_limits.yaml
connector/: __init__.py  cleaner.py  ingest.py  loader.py  logger.py  models.py  pipeline.py  queue_manager.py
content/: __init__.py  account_pool.py  accounts.py  approval.py  models.py  postgres_store.py  store.py
dashboard/: __init__.py  app.py  content_tab.py  services.py  theme.py
docs/: ARCHITECTURE-AI-ACQUISITION-OS.md  ARCHITECTURE-CIBLE-MIGRATION.md  ARCHITECTURE-ENTERPRISE-AUDIT.md  CURSOR-FIGMA-SETUP.md  DEPLOY-GRATUIT.md  ENVOI-PRET.md  FIGMA-COMPLETE-SPEC.md  FIGMA-FILE.md  FIGMA-PROTOTYPE-FLOWS.md  GUIDE_UTILISATEUR.md  LINKEDIN-AUTOMATION.md  PHASE-1-2-APPLIQUE.md  PHASE-3-5-COMPLETE.md  PHASE-CONTENT-COMPLETE.md  PHASE-E0-E5-COMPLETE.md  PROJET-STATUT.md  README.md  (+5 more)
(+234 files in other folders)
