[project]
name = "client-outreach"
version = "1.0.0"
description = "Personal lead connector and AI outreach automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.40.0",
  "pandas>=2.0.0",
  "streamlit>=1.28.0",
  "openai>=1.0.0",
  "httpx>=0.25.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "filelock>=3.13.0",
  "browser-cookie3>=0.19.1",
  "dnspython>=2.6.0",
  "phonenumbers>=8.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]
mongo = ["pymongo>=4.6.0"]

[project.scripts]
client-run = "run:main"
client-connector = "main:main"
client-outreach = "outreach:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
